[package]
name = "parasite4"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging and basic log configuration using environment variables
log="0.4.14" 
env_logger="0.9.0" 
# serialization for writing and reading numbers of different byte sizes and for compressing stuff
byteorder="1.3.4" 
zstd = "0.9.0" 
# manipulating git repositories
git2="0.13"





#clap = "2.33.3" # command-line arguments
#git-version = "0.3.4" # git-commit hash stamp 
#variant_count = "1.1.0" # to have counts of enums ready
#num-derive = "0.3" # for number to enum conversions and back
#num-traits = "0.2"
#chrono="0.4" # so that we can deal with time & printing it
#csv="1.1" # reading csv files (such as new projects to be added)
#crossbeam="0.7" # scoped worker threads
