[package]
name = "parasite4"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The parasite datastore implementation. This is only the implementation of the datastore access (R/W) and store handling functions without any actual function. 
[lib]
name = "parasite"
path = "src/lib.rs"

# Parasite is the actual perpetual updater of the datastore. It only accesses the global datastore. 
[[bin]]
name = "parasite"
path = "src/parasite.rs"

# mistletoe is the command-line viewer of the datastore using the savepoints and indices mechanism of the datastore view API. 
[[bin]]
name = "mistletoe"
path = "src/mistletoe.rs"

[dependencies]
# command-line arguments, logging and executable stamps
clap = { version = "2.33.3" , features = ["yaml"]} # command-line arguments
log="0.4.14" 
env_logger="0.9.0" 
git-version = "0.3.4"
# serialization for writing and reading numbers of different byte sizes and for compressing stuff
byteorder="1.3.4" 
zstd = "0.9.0"
# memory mapped files
memmap = "0.7.0" 
# manipulating git repositories
git2="0.13"
# extra features we use
strum = "0.21"
strum_macros = "0.21"
#variant_count = "1.1.0" # to have counts of enums ready



#num = "0.4" # for number to enum conversions and back
#num-derive = "0.3" 
#num-traits = "0.2"


#chrono="0.4" # so that we can deal with time & printing it
#csv="1.1" # reading csv files (such as new projects to be added)
#crossbeam="0.7" # scoped worker threads
